# Legion

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .pre-commit-config.yaml  .secrets.baseline  AIDER_INTEGRATION.md  APEXTRADER_v4_DEPLOYMENT_PLAN.md  AUDIT_COMPLETION_SUMMARY.md  BRANCH_PROTECTION_CONFIG.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMBAT_EXECUTION_CHECKLIST.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_REPORT_v4_1_0.md  DEPLOYMENT_STATUS.md  DEPLOY_v2.2.md  Dockerfile  Dockerfile.os  EMERGENCY_STOP.md  ENVIRONMENT_CONFIG.md  INFRASTRUCTURE_AUDIT_REPORT.md  LAUNCH_CHECKLIST.md  LEGION_MESSAGE_BUS_v2_INTEGRATION.md  LICENSE  MONITORING_PLAN.md  Makefile  QUICKSTART.md  README.md  README_v4_1.md  RELEASE_NOTES_v4.0.0.md  SECURITY.md  SECURITY_HARDENING_REPORT.md  STAGE_1_COMPLETE.md  STAGE_2A_DEVELOPMENT.md  VERSION  docker-compose.os.yml  docker-compose.yml  grail_agent_production.py  (+10 more)
.github/: .ci-trigger  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci-healer.yml  ci-overlord-v2.yml  ci.yml  codeql-analysis.yml  docker.yml  ghost-ci.yml  grail_agent_deploy.yml  legion-v5-ci.yml  neuro_learning_v4_1_ci.yml  neuro_rewriter_ci.yml  nightly-security.yml  production.yml  qa.yml  release.yml  walbi-automation.yml
aider_env/: pyvenv.cfg
aider_env/Scripts/: activate  activate.bat
artifacts/: architecture_manifest_v4.json  comet_terminator_auto_fix_report_2025_12_02.md  comet_terminator_final_report_2025_12_02.md  shadow_testing_final_report.md  shadow_testing_phase0_init.json  shadow_testing_phase1_baseline.json  shadow_testing_phase2_neuro_learning.json
artifacts/registry/: active_version.json  architecture_manifest_v4_1.json  semantic_hash_v4_1.txt
artifacts/snapshots/: v4.0.0_production_snapshot.json
benchmarks/: performance_test.py
config/: monitoring_v4_1.yml  production.yml  production_config_v4_1.yaml
diagnostics/overlord/: EXECUTION_REPORT_2025-12-10.md
diagnostics/singularity/: PHASE_4_ARCHITECTURAL_ANALYSIS.md  PHASE_4_SUMMARY.md
docs/: AI_ENHANCEMENTS_QUICKSTART.md  CHANGELOG_v4_1.md  DEPLOYMENT_PLAN_V2.2.md  DEPLOYMENT_REPORT_v4_1.md  FINAL_VALIDATION_v4_1.md  MESSAGING_LAYER.md  MIGRATION_v2.3.md  README.md  ULTRA_ORCHESTRATOR_V4.md  ULTRA_ORCHESTRATOR_V4_ARCHITECTURE.md  VALIDATION_REPORT_v4_1.md  architecture.md  deployment.md  staging.md  troubleshooting.md  v4_1_architecture_plan.md
examples/: README.md  ai_automation_demo.py  aider_integration_demo.py  basic_usage.py  full_workflow_example.py  neuro_learning_example.py  specialized_agents.py  supabase_integration.py
scripts/: benchmark.py  compare_benchmarks.py  security_summary.py  validate_architecture.py
src/: main.py
src/legion/: __init__.py  agents.py  base_agent.py  cli.py  core.py  core_memory_fixed.py  database.py  integration.py  logging_config.py  queue.py
src/legion/agents/: __init__.py  base_agent.py  browser_agent.py  ci_healer_agent.py  data_agent.py  email_agent.py  sheets_agent.py
src/legion/agents/ci_healer/: __init__.py  dependency_doctor.py  detectors.py  patch_engine.py  risk_analyzer.py  semantic_indexer.py  telemetry.py
src/legion/ai/: __init__.py  script_generator.py
src/legion/auth/: jwt_manager.py  session_manager.py
src/legion/distributed/: __init__.py  distributed_core.py  distributed_launcher.py  distributed_worker.py
src/legion/executor/: task_executor_v2.py
src/legion/infrastructure/: __init__.py
src/legion/infrastructure/audit/: __init__.py  logger.py
src/legion/infrastructure/auth/: __init__.py  models.py  (+2 more)
src/legion/integrations/: aider_agent.py  aider_bridge.py
src/legion/mcp/: __init__.py  client.py  executor.py  server.py  tools.py
src/legion/messaging/: __init__.py  broker.py  config.py  consumer.py  dlq.py  events.py  factory.py  handlers.py  middleware.py  publisher.py  tracing.py  versioning.py
src/legion/monitoring/: __init__.py  prometheus_exporter.py
src/legion/neuro_architecture/: __init__.py  adapters.py  adaptive_refactor_engine.py  evaluator.py  generator.py  humanistic_controller.py  mobile_agent.py  mobile_agent_v4_1.py  neuro_learning_loop.py  registry.py  self_improver.py  storage.py  storage_v4_1.py  trainer.py  watchdog.py  watchdog_v4_1.py
src/legion/orchestration/: __init__.py  agents.py  orchestrator.py  patterns.py
src/legion/os_integration/: __init__.py  audit.py  identity.py  interface.py  os_interface.py  self_improvement.py  workspace.py
src/legion/quantum_swarm/: __init__.py  qsn_controller_agent.py  qsn_fabric_engine.py  qsn_mesh_router.py  qsn_node.py  qsn_telemetry.py
src/legion/utils/: __init__.py  circuit_breaker.py  connection_pool.py  rate_limiter.py  retry.py
supabase_env/: pyvenv.cfg
supabase_env/Scripts/: activate  activate.bat
tests/: __init__.py  conftest.py  test_agents_integration.py  test_browser_agent.py  test_grail_agent.py  test_integration.py  test_legion_core.py  test_mcp_executor.py  test_mcp_tools.py  test_neuro_learning_v4_1.py  test_os_integration.py  test_performance_benchmarks.py  test_ultra_orchestrator_v4.py  test_utils_comprehensive.py  test_v2_3_features.py
tests/agents/: test_ci_healer_agent.py
tests/integration/: __init__.py  test_api_workflow.py  test_async_workflows.py  test_resilience.py  test_task_dispatch.py
tests/load/: api_load_test.js
tests/messaging/: __init__.py  test_integration.py
tests/os_integration/: __init__.py  test_audit.py  test_identity.py  test_workspace.py
tests/performance/: __init__.py  test_async_performance.py  test_database_queries.py  test_serialization.py
tests/security/: __init__.py  test_authentication.py  test_input_validation.py
tests/unit/: __init__.py  test_base_agent.py  test_connection_pool.py  test_core.py  test_dependency_doctor.py  test_rate_limiter.py
tools/: activate_v4_1.py  baseline_snapshot.py  orchestrator_cli.py  production_deploy_v4_1.py  quality_check.py  shadow_testing_init.py  shadow_testing_phase2_neuro_cycle.py  ultra_orchestrator.py  validate_deployment.py
(+16 files in other folders)
