[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legion-framework"
version = "2.5.0"
description = "Multi-agent framework for intelligent task dispatching and coordination"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Legion Framework Team", email = "legion14041981@gmail.com"},
]
keywords = [
    "multi-agent",
    "ai",
    "agents",
    "orchestration",
    "async",
    "framework",
    "production-ready",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/legion14041981-ui/Legion"
Documentation = "https://github.com/legion14041981-ui/Legion/tree/main/docs"
"Source Code" = "https://github.com/legion14041981-ui/Legion"
"Issue Tracker" = "https://github.com/legion14041981-ui/Legion/issues"
Changelog = "https://github.com/legion14041981-ui/Legion/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "black>=25.11.0",
    "isort>=5.13.2",
    "ruff>=0.14.7",
    "mypy>=1.14.1",
    "pylint>=3.3.4",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "sphinx>=7.4.7",
    "pre-commit>=4.0.1",
    "bandit>=1.7.5",
    "safety>=3.0.0",
    "pip-audit>=2.6.0",
    "detect-secrets>=1.4.0",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "PERF", # perflint (performance)
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # STRICT MODE: All defs must have types
ignore_missing_imports = false  # STRICT: Require stubs for external libs
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_optional = true
check_untyped_defs = true
allow_untyped_calls = false  # STRICT: All calls must have typed arguments

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=src/legion --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=85 -n auto --timeout=30"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests",
    "performance: marks tests as performance tests",
]
asyncio_mode = "auto"
console_output_style = "progress"
log_cli = true
log_cli_level = "INFO"

[tool.coverage.run]
source = ["src/legion"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 85  # STRICT: Minimum 85% coverage
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "except ImportError",
    "except ModuleNotFoundError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101", "B601"]  # Skip assert_used and paramiko_calls
recursive = true

[tool.bandit.assert_used]
skips = ["*/tests/*", "**/test_*.py"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 100
good-names = ["i", "j", "k", "ex", "Run", "_"]

[tool.pylint.basic]
module-naming-style = "snake_case"

[tool.pylint.design]
max-attributes = 10
max-arguments = 6
